--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "port": 8080,
-    "domain": "https://localhost:8080/api" //CAMBIAR ESTO PARA LINKED DATA FRAGMENTS
+    "domain": "https://localhost:8080/api"
 }
